--- a/UpcomingMovies.Arc/UpcomingMovies.Arc/UpcomingMovies.Arc/Views/UpcomingMoviesListView.xaml
+++ b/UpcomingMovies.Arc/UpcomingMovies.Arc/UpcomingMovies.Arc/Views/UpcomingMoviesListView.xaml
@@ -4,35 +4,61 @@
              x:Class="UpcomingMovies.Arc.Views.UpcomingMoviesListView"
              xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms" 
              xmlns:fftransformations="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
-             xmlns:local="clr-namespace:UpcomingMovies.Arc"
-             Title="{Binding Title}"
-             x:Name="BrowseItemsPage">
+             Title="{Binding TitleView}">
+    <ContentPage.ToolbarItems>        
+        <ToolbarItem x:Name="settingsToolbarItem" Icon="icon.png" Text="Settings" Command="{Binding ShowSettingsCommand}" />        
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout>
-            <ListView ItemsSource="{Binding Items}" CachingStrategy="RetainElement" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" HasUnevenRows="false" IsPullToRefreshEnabled="true" IsRefreshing="{Binding IsBusy, Mode=OneWay}">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
+            <ListView ItemsSource="{Binding Items}" CachingStrategy="RetainElement" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" HasUnevenRows="true" IsPullToRefreshEnabled="false" 
+                      ItemTapped="ListView_ItemTapped" 
+                      ItemAppearing="ListView_ItemAppearing"
+                      IsRefreshing="{Binding IsLoading, Mode=OneWay}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
                                 <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                                <ContentView Margin="3" >
-                                    <ffimageloading:CachedImage  HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" DownsampleToViewSize="false" Source="{Binding ImageSourceBackDrop}" LoadingPlaceholder="placeholderProfileImage.png">
-                                            <!--<ffimageloading:CachedImage.Transformations>
+                                    <ContentView Margin="3">
+                                        <ffimageloading:CachedImage  HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" DownsampleToViewSize="false" Source="{Binding ImageSourceBackDrop}"
+                                                                     LoadingPlaceholder="placeholderProfileImage.png">
+                                            <ffimageloading:CachedImage.Transformations>
                                                 <fftransformations:RoundedTransformation />
-                                            </ffimageloading:CachedImage.Transformations>-->
+                                            </ffimageloading:CachedImage.Transformations>
                                         </ffimageloading:CachedImage>
                                     </ContentView>
-                                <ContentView Padding="5,5,5,5" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                                        <StackLayout Spacing="0" Orientation="Vertical" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                                            <Label Text="{Binding Title}" VerticalTextAlignment="End" LineBreakMode="TailTruncation" FontSize="Micro" FontAttributes="Bold" />                                            
-                                            <Label Text="{Binding GenresByComma}" VerticalTextAlignment="End" FontSize="Micro" LineBreakMode="TailTruncation" TextColor="Silver" />
-                                            <Label Text="{Binding Release_Date}" VerticalTextAlignment="Start" FontSize="Micro" LineBreakMode="TailTruncation" TextColor="Silver" />
-                                        </StackLayout>
-                                </ContentView>
+                                    <StackLayout Spacing="5" Orientation="Vertical" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                                        <!-- title -->
+                                        <ContentView>
+                                            <StackLayout Orientation="Horizontal" Spacing="5">
+                                                <StackLayout Spacing="0">
+                                                    <Label Text="{Binding Title}" FontSize="Default" FontAttributes="Bold" />
+                                                </StackLayout>
+                                            </StackLayout>
+                                        </ContentView>
+                                        <!-- genres-->
+                                        <ContentView>
+                                            <StackLayout Orientation="Horizontal" Spacing="5">
+                                                <Image Source="ic_movie_creation_black_48dp.png" Aspect="AspectFit" HeightRequest="15" WidthRequest="15" />
+                                                <StackLayout Spacing="0">
+                                                    <Label Text="{Binding GenresByComma}"/>
+                                                </StackLayout>
+                                            </StackLayout>
+                                        </ContentView>
+                                        <!-- release date -->
+                                        <ContentView>
+                                            <StackLayout Orientation="Horizontal" Spacing="5">
+                                                <Image Source="ic_date_range_black_48dp.png" Aspect="AspectFit"  HeightRequest="15" WidthRequest="15" />
+                                                <StackLayout Spacing="0">
+                                                    <Label Text="{Binding Release_Date}"/>
+                                                </StackLayout>
+                                            </StackLayout>
+                                        </ContentView>
+                                    </StackLayout>                                 
                                 </StackLayout>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>           
-            </ListView>
-        </StackLayout>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackLayout>
     </ContentPage.Content>
 </ContentPage>
